<resources>
    <string name="app_name">MaintaiNFC</string>
    <string name="read_tag_bt_label">Read</string>
    <string name="write_to_tag_bt_label">Write</string>
    <string name="format_tag_bt_label">Format Tag</string>
    <string name="device_does_not_support_nfc_msg">This device doesn\'t support NFC.</string>
    <string name="approach_nfc_tag_msg">Approach NFC tag</string>
    <string name="employee_id_label">Employee Id:</string>
    <string name="pick_date_button_label">Date</string>
    <string name="pick_time_button_label">Time</string>
    <string name="your_employee_id_hint">Your Employee Id</string>
    <string name="next">Next</string>
    <string name="set_date_and_time_bt_label">Set Date and Time</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="date_and_time_label">Date and Time last Maintenance:</string>
    <string name="summary_message">The following data have been successfully written to the device:</string>
    <string name="ok">Ok</string>
    <string name="custom_nextDate_bt_label">Custom Date</string>
    <string name="next_date_and_time_label">Next Date and Time</string>
    <string name="input_your_employee_id_label">Enter your Id:</string>
    <string name="write_to_tag_error">Error writing to Tag</string>
    <string name="data_incomplete_error_msg">Data are incomplete</string>
    <string name="failed_to_read_tag_msg">Failed to read NFC Tag</string>
    <string name="read_tag_toolbar_title">Read from NFC</string>
    <string name="summary_toolbar_title">Summary</string>
    <string name="employee_id_toolbar_title">Enter your Id</string>
    <string name="this_date_toolbar_title">Date and Time</string>
    <string name="next_date_toolbar_title">Next Service</string>
    <string name="write_toolbar_title">Writing to Tag</string>
    <string name="tag_is_empty__msg">Tag is empty</string>
    <string name="label_6_month">in 6 months</string>
    <string name="label_1_year">in 1 year</string>
    <string name="label_2_years">in 2 years</string>
    <string name="next_date">Next Date</string>
    <string name="nfc_currently_disabled">NFC currently disabled!</string>
    <string name="msg_start_tag_discovery">Starting NFC-Tag discovery</string>
    <string name="invalid_tag_type_error">NFC Tag not compatible</string>
    <string name="invalid_password_type_error">Could not authenticate on NFC tag</string>
</resources>