<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="at.stefanirndorfer.maintainfc.viewmodel.MainScreenViewModel" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.MainScreenFragment"
    android:orientation="vertical">

    <Button
        android:id="@+id/read_tag_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()->viewModel.onReadButtonClick()}"
        android:text="@string/read_tag_bt_label" />
    <Button
        android:id="@+id/start_write_flow_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()-> viewModel.onWriteButtonClick()}"
        android:text="@string/write_to_tag_bt_label" />
    <Button
        android:id="@+id/format_tag_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/format_tag_bt_label" />

</LinearLayout>
</layout>
