<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="at.stefanirndorfer.maintainfc.viewmodel.ResultsViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_button"
    tools:context=".view.ResultsFragment">

    <TextView
        android:id="@+id/emp_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:text="@string/employee_id_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employee_id_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewModel.employeeId}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emp_id_label" />

    <TextView
        android:id="@+id/date_and_time_label"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_results"
        android:text="@string/date_and_time_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_id_result" />

    <TextView
        android:id="@+id/date_and_time_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewModel.dateAndTime}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_and_time_label" />

    <TextView
        android:id="@+id/next_date_and_time_label"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_results"
        android:text="@string/next_date"
        app:layout_constraintTop_toBottomOf="@+id/date_and_time_result" />

    <TextView
        android:id="@+id/next_date_and_time_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewModel.nextDateAndTime}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_date_and_time_label" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>